--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
   /* Botón de inicio */
   #start-button {
     padding: 10px 20px;
-    background-color: #4CAF50;
+    background-color: #23c429;
     color: white;
     border: none;
     border-radius: 5px;
