--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ body {
   
   /* Botones de colores */
   #color-buttons {
+    display: flex; /* Usar Flexbox */
+    justify-content: center; /* Centrar horizontalmente */
+    align-items: center; /* Centrar verticalmente */
+    flex-wrap: wrap;
     display: grid;
     grid-template-columns: repeat(2, 100px); /* Dos columnas */
     grid-gap: 10px;
@@ -59,7 +63,7 @@ body {
   /* Botón de inicio */
   #start-button {
     padding: 10px 20px;
-    background-color: #23c429;
+    background-color: #4CAF50;
     color: white;
     border: none;
     border-radius: 5px;
@@ -86,6 +90,37 @@ body {
     border: 1px solid #ddd;
     text-align: left;
   }
+  #reset-options {
+    margin-top: 10px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+  #restart-scores {
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+    margin-top: 10px;
+}
+  #change-player-button {
+    margin-top: 10px;
+    padding: 8px 16px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+  
+
   
   /* Diseño responsivo */
   @media (max-width: 500px) {
